--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body {
 }
 
 .container {
-    height: 690px;
-    width: 690px;
+    height: 700px;
+    width: 700px;
     background-color: darkcyan;
+    display: flex;
+    flex-wrap: wrap;
 }
